# OSAM-ARM-Moveit

./: README.md
moveit_osam_arm_sim/: .setup_assistant  CMakeLists.txt  package.xml
moveit_osam_arm_sim/config/: fake_controllers.yaml  gazebo_osam_arm_4_urdf_v2.urdf  gazebo_osam_arm_urdf.urdf  new_ros_controllers.yaml  ompl_planning.yaml  osam_arm_4_urdf_v2.srdf  osam_arm_urdf.srdf  ros_controllers.yaml  stomp_planning.yaml
moveit_osam_arm_sim/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  full_robot_arm_sim.launch  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_control_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
moveit_osam_arm_sim/scripts/: comms_node.py  custom_path.py  vm_to_local_node.py  write_json.py
moveit_osam_arm_sim_v2/: .setup_assistant  CMakeLists.txt  package.xml
moveit_osam_arm_sim_v2/config/: fake_controllers.yaml  gazebo_osam_arm_4_urdf_v2.urdf  joint_limits.yaml  new_ros_controllers.yaml  ompl_planning.yaml  osam_arm_4_urdf_v2.srdf  stomp_planning.yaml
moveit_osam_arm_sim_v2/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  (+15 more)
osam_arm_4_urdf_v2/: CMakeLists.txt  package.xml
osam_arm_urdf/: CMakeLists.txt  package.xml
osam_arm_urdf/config/: joint_names_osam_arm_4_urdf_v2.yaml  joint_trajectory_controller.yaml
osam_arm_urdf/launch/: arm_urdf.launch  display.launch  gazebo.launch
osam_arm_urdf/meshes/: link_3.STL  link_4.STL  link_8.STL  link_9.STL
osam_arm_urdf/urdf/: osam_arm_urdf.csv  osam_arm_urdf.urdf
osam_moveit_config_position_control/: .setup_assistant  CMakeLists.txt  package.xml
scripts/: change_controller.py  comms_config.py  comms_node.py  custom_path.py  read_write_json.py
(+33 files in other folders)
