<package format="2">
  <name>osam_arm_urdf</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for osam_arm_urdf</p>
    <p>This package contains configuration data, 3D models and launch files
for osam_arm_urdf robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>message_generation</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <buildtool_depend>rospy</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>urdf</buildtool_depend>
  <buildtool_depend>xacro</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>moveit_simple_controller_manager</depend>


  <!-- <build_export_depend>roscpp</build_export_depend> -->
  <!-- <build_export_depend>rospy</build_export_depend> -->
  <!-- <build_export_depend>std_msgs</build_export_depend> -->
  <!-- <build_export_depend>geometry_msgs</build_export_depend> -->
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>

  <!-- <exec_depend>roscpp</exec_depend> -->
  <!-- <exec_depend>rospy</exec_depend> -->
  <!-- <exec_depend>std_msgs</exec_depend> -->
  <!-- <exec_depend>geometry_msgs</exec_depend> -->
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>message_runtim</exec_depend>
  
  <export>
    <architecture_independent />
  </export>
</package>